hago modificaciones para adoptar mejor el responsive para mobile

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         </header>
         <main class="main">
            <section class="grilla d-grid">
-                <div class="titulo">
+                <div class="titulo row d-flex">
                     <h1 class="tituloPrincipal">Vení por el sushi, quedate por la experiencia.</h1>
                     <a class="enlaceMenu pt-25 pb-25" href="./pages/menu.html">VER MENÚ</a> <!-- no consigo bajar el enlace MENÚ con justify-content-center en la grilla o título o titulo principal, o align items en el ancla -->
                 </div>
                 <div class="imgGrilla p-20 rounded mx-auto">
-                    <img src="./assets/img/imagen index.jpg" width="600" height="800" alt="imagen grilla">
+                    <img class="w-100" src="./assets/img/imagen index.jpg" width="500" height="700" alt="imagen grilla">
                 </div>
                 <div class="uno">
                     <p>Inspirados en el mar, donde todo dió origen, en Mai Sushi fusionamos los sabores originados en Oriente y Occidente, creando platos gourmet con base en los mares de los siete continentes para ofrecerte una experiencia gastronómica única todos los días.</p>
-                    <a class="enlaceConocenos pt-25 pb-25" href="./pages/conocenos.html">CONOCENOS</a> <!-- no consigo centrar el enlace CONOCENOS con justify-content-center en el padre o en la grilla, o align items en el ancla  -->
+                    <a class="enlaceConocenos pt-25 pb-25" href="./pages/conocenos.html">CONOCENOS</a>
                 </div>
             </section>
         </main>
