--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -52,13 +52,13 @@
                   <p>Generar en nuestros clientes la conexión directa con la marca por asociación de ideales, superando sus expectativas en cuanto a calidad y servicio, innovando y causando asombro con nuestras creaciones.</p>
                 </div>
                 <div class="col">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/0-ncyfpe_7Q?si=s7W3kQVOxhILOvas" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  <iframe class="w-100" width="560" height="315" src="https://www.youtube.com/embed/0-ncyfpe_7Q?si=s7W3kQVOxhILOvas" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
           </div>
           <div class="container">
               <div class="row">
                  <div class="col">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/N2z7s3U_uLI?si=cXb-beSPXPcRI9qk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  <iframe class="w-100" width="560" height="315" src="https://www.youtube.com/embed/N2z7s3U_uLI?si=cXb-beSPXPcRI9qk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                   </div>
               <div class="col">
                   <h3>MISIÓN</h3>
