--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -43,16 +43,16 @@
     </header>
         <main class="main">
             <h2 class="tituloSuc">NUESTRAS SUCURSALES</h2>
-            <section class="sucursales d-flex justify-content-around">
-                <div>
+            <section class="row container-fluid">
+                <div class="column">
                     <h3 class="barrioSuc text-center">PALERMO</h3>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d13137.274193387319!2d-58.3732238!3d-34.5961056!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1707334530284!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="w-100" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d13137.274193387319!2d-58.3732238!3d-34.5961056!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1707334530284!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <p>Costa Rica 5802, Palermo, CABA</p>
                     <p>(+54) 1234 5678</p>
                 </div>
-                <div>
+                <div class="column">
                     <h3 class="barrioSuc text-center">SAN NICOLÁS</h3>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d13139.648515277217!2d-58.4369172!3d-34.5810899!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1707334619098!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="w-100" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d13139.648515277217!2d-58.4369172!3d-34.5810899!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1707334619098!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <p>Marcelo T. de Alvear 401, San Nicolás, CABA</p>
                 <p>(+54) 1122 3344</p>
                 </div>
