--- a/pages/menu.html
+++ b/pages/menu.html
@@ -43,7 +43,7 @@
     </header>
         <main class="main text-center">
             <h2>MENÚ</h2>
-            <img src="../assets/img/menu.jpg" width="800px" height="800px" alt="Imagen del Menú">
+            <img class="w-100" src="../assets/img/menu.jpg" width="800px" height="800px" alt="Imagen del Menú">
         </main>
         <footer class="footer d-flex justify-content-around">
             <section>
